--- a/Talleres/t1/index.htm
+++ b/Talleres/t1/index.htm
@@ -25,7 +25,7 @@
           <a class="header__links-btn" href="../t3/index.htm"> T3</a>
           <a class="header__links-btn" href="../t4/index.htm"> T4</a>
         </div>
-        <a class="header__links-btn" href="https://github.com/Sergio9815/curso-practicoJS"><i
+        <a class="header__links-btn" href="https://github.com"><i
             class="fab fa-github fcolor"></i>GITHUB</a>
       </section>
 
