--- a/Talleres/t3/index.htm
+++ b/Talleres/t3/index.htm
@@ -25,14 +25,14 @@
           <a class="header__links-btn" href="../t3/index.htm"> T3</a>
           <a class="header__links-btn" href="../t4/index.htm"> T4</a>
         </div>
-        <a class="header__links-btn" href="https://github.com/Sergio9815/curso-practicoJS"><i
+        <a class="header__links-btn" href="https://github.com"><i
             class="fab fa-github fcolor"></i>GITHUB</a>
       </section>
 
     </nav>
     <section class="header__info">
       <h1 class="header__info-title">Promedio, moda y mediana</h1>
-      <p class="header__info-desc">Tercer taller del curso práctico de JavaScript 🎈</p>
+      <p class="header__info-desc">Tercer taller del curso práctico de JavaScript </p>
     </section>
   </header>
   <div class="header-decoration"></div>
@@ -53,7 +53,7 @@
       </div>
       <button type="button" id="calcular">Calcular</button>
     </form>
-    <span class="result" id="main__result">^_^</span>
+    <span class="result" id="main__result"></span>
   </section>
 
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
